<resources>
    <string name="app_name">Versiones de Android</string>
    <string name="Titulo">Sistema Operativo</string>
    <string name="Logo">Symbian</string>
    <string name="symbian">load</string>
    <string name="Titulo2">Elige una opción</string>
    <string name="buttonHistoria">HISTORIA</string>
    <string name="android1_0">Android 1.0 - 1.1</string>
    <string name="android1_5">Android 1.5</string>
    <string name="android1_6">Android 1.6</string>
    <string name="android2_0">Android 2.0  - 2.1</string>
    <string name="android2_2">android 2.2 - 2.2.3</string>
    <string name="android2_3">Android 2.3 - 2.3.7</string>
    <string name="android3_0">Android 3.0 - 3.2.6</string>
    <string name="android4_0">Android 4.0 - 4.3.1</string>
    <string name="Marketi">Android Market</string>
    <string name="marketcaracteristicas">Esta aplicación viene instalada en casi todos los teléfonos con sistema operativo Android. Las hay que son gratuitas y otras de pago [puedes adquirir con tu tarjeta de débito o crédito habitual] y para casi todas las características que busques hay una aplicación que sueles tener gratis. Algunas de las de pago vienen en una versión demo gratuita para que la pruebes y luego si te gusta poder comprarla y usar todas sus características.

Tienes más de 400.000 aplicaciones para poder elegir de las cuales dos tercios de ellas son gratuitas.Otra cualidad del Market es que cuando pinchas en una aplicación que quieras instalar tienes unas capturas de pantalla para que veas de que va el juego o aplicación.Además de las capturas de pantalla tienes una pequeña descripción explicándote de que va lo que vas a instalar y en algunas también viene un vídeo para estar más seguro de lo que descargamos. Desde su lanzamiento hasta el 2011se agregaron nuevas funciones y en septiembre del mismo año se cambio el diseño para el android 3.0 que era para tablets, también se ingreso el google music que despues seria retirado en el año 2019 </string>
    <string name="fotomarket">marketandroid</string>
    <string name="googlemusica">musicadegoogle</string>
    <string name="cambiodenombre">En el 2012 cambio su nombre a Google play store sin embargo años después solo quedaria como Play Store el cual tiene mayor seguridad y dejo de brindar los servicios de google play music.</string>
    <string name="androidimagen1_5">imagenandroid1_5</string>
    <string name="android1_5hi">El 27 de abril de 2009 llegaba Android 1.5 Cupcake y se iniciaba así la tradición de nombrar a las versiones mayores según un postre, por orden alfabético. Llegaba dos meses después de Android 1.1 y refinaba un poco el diseño para hacerlo más atractivo. Cambios sutiles: una transparencia por aquí, una sombra por allá. En la siguiente imagen unca comparativa de las interfaces de android 1.1 y android 1.5</string>
    <string name="interfaz1_51_1">1_11_5</string>
    <string name="interfaz">El añadido más importante de esta versión, fue un componente del sistema sin el que, probablemente, a día de hoy no podríamos vivir: el teclado virtual. Gracias a esta herramienta, los fabricantes que tenían entre sus planes la creación de smartphones con Android, no tendrían que seguir obligatoriamente la tendencia de crear dispositivos con decenas de botones físicos y teclado QWERTY completo.  El panel de notificaciones también fue rediseñado como en prácticamente todas las versiones de Android , recibiendo un fondo que mostraba una nueva textura, y tarjetas de notificaciones mostrando una apariencia más limpia y suave. Recibía también el soporte para copiar y pegar en el navegador web, transiciones animadas, rotación automática de la pantalla y la posibilidad de subir vídeos a YouTube.</string>
    <string name="android20">Android Eclair 2.0 - 2.1</string>
    <string name="android20hi">El siguiente postre de Android vería la luz el 26 de octubre de 2009, poco más de un mes después de donut. Llegaban las rutas a Google Maps y el soporte multicuenta y para sincronización con cuentas de terceros, como por ejemplo con Facebook. La interfaz se volvía a refinar y se soportaban todavía más tamaños de pantalla y resoluciones. </string>
    <string name="maps">mapasdegoogle</string>
    <string name="liveg">Llegaban los Live Wallpapers y se mejoraba la cámara con el soporte para flash, zoom digital y escenas. La gran mayoría de aplicaciones incluídas recibían su dosis de mejoras, como el navegador web, Google Maps, el Calendario o el teclado virtual, que incluía un diccionario y ya sugería nombres de contactos. recibió dos actualizaciones posteriores. La versión 2.0.1 llegaba el 4 de diciembre de 2009 corrigiendo unos pocos errores y la versión 2.1 el 12 de enero de 2010, con otra tanda de mejoras y revisión de la API. Ya por aquel entonces los fabricantes estaban demasiado entusiasmados en añadir su capa de personalización y así nacía el programa Nexus: Android tal y como Google lo había concebido, materializado por primera vez en el Nexus One.</string>
    <string name="nexusonehistoria">Caraceristicas del Nexus One</string>
    <string name="nexusone">nexusonein</string>
    <string name="nexusonetxt">pantalla táctil de 3.7 pulgadas, con una resolución de 800 × 480 píxeles, y de tipo AMOLED. Como curiosidad, el trackball situado en la parte inferior de esta se ilumina en distintos colores para dar información visual de distintos eventos (nuevos mensajes, llamadas perdidas). En el interior, un procesador Snapdragon a 1 GHz le da la potencia necesaria para ejecutar todo tipo de aplicaciones sin problemas. Los sensores de luz, para ajustar automáticamente el brillo, y de proximidad se dan por supuestos, así como el receptor GPS, el acelerómetro y la brújula. Se le suma, además, una cámara de 5 megapíxeles con un flash LED y un conector de auriculares de 3.5 milímetros con cuatro puntos de contacto. Esto significa que sirve, al mismo tiempo, como auricular y como micrófono. El propio teléfono incluye un par de micrófonos para realizar supresión de ruido.  Todo ello llega en un grosor de 11.5 milímetros y un peso de 130 gramos, además de la posibilidad de grabar un mensaje en la carcasa cuando lo pidamos. El teléfono viene equipado con Android 2.1, la última versión de este sistema, que incluye aplicaciones como Google Maps con navegación, cliente de Facebook y otras.</string>
    <string name="nexustras">posteriornexusone</string>
    <string name="Android2_2">Android 2.2 Froyo</string>
    <string name="androidrc">androidecr</string>
    <string name="froyoimg">imagenfroyo</string>
    <string name="froyohis">En mayo de 2010 pasábamos del ecclair al yogur helado con la llegada de Froyo. Dos de sus cambios más importantes son el soporte para comandos de voz y la creación de puntos de acceso Wi-Fi. Aquí tienes al tatarabuelo de Google Assistant, pues era ya posible buscar, obtener direcciones, escribir notas, programar alarmas y más acciones solo con tu voz. Froyo recibió un impulso importante en velocidad y rendimiento. El navegador web mejoraba con la integración del motor V8 de Javascript de Chrome, el soporte para la subida de archivos y el soporte para GIF animados. Sí, GIF animados. Se incluía también el soporte para Adobe Flash. Las notificaciones push con el servicio Android Cloud to Device Messaging (C2DM) y se permitía por primera vez mover aplicaciones a la tarjeta SD. Froyo se actualizaba en tres ocasiones con las versiones 2.2.1 y 2.2.2, separadas solo 4 días entre sí y la versión 2.2.3, en noviembre de 2011. Se trataban principalmente de correcciones de errores y parches de seguridad. Mejorando notablemente el rendimiento gracias al añadido del compilador Dalvik JIT, que convertía en código de bytes de java en lenguaje nativo en tiempo real. Se agrego un dock de aplicaciones en la pantalla de inicio, con dos iconos laterales para ejecutar el navegador y la app de teléfono que no eran personalizables, y uno central destinado a abrir el cajón de apps.</string>
    <string name="parche">parche</string>
    <string name="home">home</string>
    <string name="interface2_2">Pantalla de inicio de android Froyo</string>
    <string name="caracteristicasnexuss">Samsung Nexus S</string>
    <string name="nexusdesamsung">nexusdesamsung</string>
    <string name="nexusex">El Nexus S es el segundo teléfono en que el gigante del buscador ha confesado ser el padre sin tapujos. En esta ocasión, ha sido infiel a HTC y este nuevo Google Nexus S es fruto de su actual idilio con Samsung, que vive un excelente momento en EEUU. Con un diseño similar al Galaxy S e incluso el primer teléfono de Google, si nos fijamos detenidamente en las fotos del Nexus S, la curvatura de la pantalla es lo que más nos llama la atención. Como punto ergonómico nos parece más que correcto, pero nos quedan dudas sobre su funcionamiento.  Entre todas las características del Nexus S llama la atención la tecnología NFC que permitirá popularizar el pago directo usando el teléfono móvil como monedero virtual. Las dimensiones del Google Nexus S son de 63mm x 123.9mm x 10.88mm para un peso de 129 gramos, todo en la media de los smartphones actuales. Sí que hay una novedad en el procesador, que es un modelo con nombre en clave Hummingbird y que trabaja a 1 Ghz sobre la base del Cortex A8. No es por lo tanto un procesador de doble núcleo como se esperaba, pero parece que no le hará falta de momento, pues en el apartado gráfico promete un rendimiento muy superior al de los Snapdragon actuales.  Para la memoria, Samsung y Google han optado por darle memoria flash de 16 GB sin ninguna posibilidad de ampliación física. En un terminal actual es una limitación considerable que no entendemos. Este Nexus S es un terminal HSDPA a 7.2 Mbps (HSUPA a 5.76 Mbps), con WiFi de tipo n, bluetooth 2.1 (han perdido una oportunidad de ponerle la 3.0), A-GPS y puerto microUSB para la recarga y paso de datos del teléfono. Completan sus características menos buscadas el giroscopio, el acelerómetro, la brújula y los sensores de proximidad y luminosidad.  De las características básicas de este Nexus S nos queda repasar la batería, de 1.500 mAh, prometiendo Google que nos aguantará hasta 6.7 horas a máximo rendimiento usando redes 3G.  pantalla de 4 pulgadas y resolución de 480×800 píxeles es la tecnología SuperAMOLED Cámara de fotos de 5 megapíxeles</string>
    <string name="nexufr">nexufr</string>
    <string name="android44title">Android 4.4 - 4.4.4 Kit-Kat</string>
    <string name="caracteristicas44">Android KitKat es una de las versiones de Android más emblemáticas, y no solo por lo pegadizo de su nombre (la primera vez que Google se aliaba con otra empresa para su mascota de Android). Hasta hace no mucho, seguía siendo una de las versiones más usadas, e incluso hoy en día, cuatro años más tarde, mantiene una honorable cuota del 13,4% en la distribución de versiones.  En KitKat se hacía un necesario refresco a la interfaz, eliminando cualquier resto de la estética \"a lo Tron\" de versiones anteriores. Desaparecían los acentos de color en azul para cambiarse por iconos más claros. Llegaban también las transparencias: en el panel de notificaciones, en la barra de navegación y en Google Now, que ahora se desplegaba sobre tu escritorio. El modo inmersivo llegaba también con KitKat: la barra de estado y la barra de navegación se ocultaban para dejarle todo el protagonismo a la aplicación. Uno que nunca desaparecería es el menú para mostrar los menús que no caben en la barra de acción (el botón de tres puntos en vertical): se mostrará siempre porque Android 4.0 determina obsoleto el botón físico de menú. Android KitKat recibirá las actualizaciones 4.4.1 y 4.4.2 en diciembre de 2013, con cambios menores y mejor compatibilidad. En Junio llegarían otras dos actualizaciones, 4.4.3 y 4.4.4, con correcciones de errores y mejoras de seguridad.</string>
    <string name="imgkit">imgkat</string>
    <string name="in44f">in44f</string>
</resources>