<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Frm11Activity">

    <TextView
        android:id="@+id/android2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="cursive"
        android:text="@string/Android2_2"
        android:textColor="#03420C"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="335dp"
        android:layout_height="478dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/android2_2"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/froyoimg"
                android:layout_width="341dp"
                android:layout_height="143dp"
                android:contentDescription="@string/froyoimg"
                app:srcCompat="@drawable/froyo" />

            <TextView
                android:id="@+id/caractrfroyo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/froyohis"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/parche"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="@string/parche"
                app:srcCompat="@drawable/parche" />

            <TextView
                android:id="@+id/interfaces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interface2_2"
                android:textColor="#F8080541"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/home"
                android:layout_width="match_parent"
                android:layout_height="562dp"
                android:contentDescription="@string/home"
                app:srcCompat="@drawable/home" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/back"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:background="@drawable/regresar"
                    android:onClick="back" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>