<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Frm9Activity">

    <TextView
        android:id="@+id/android2_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="@string/android20"
        android:textColor="#085C1F"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="341dp"
        android:layout_height="527dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/android2_0"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/androidecl"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:contentDescription="@string/androidrc"
                app:srcCompat="@drawable/androide" />

            <TextView
                android:id="@+id/eclairhi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/android20hi"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imagendemapa"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:contentDescription="@string/maps"
                app:srcCompat="@drawable/maps" />

            <TextView
                android:id="@+id/live"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/liveg"
                android:textSize="30sp" />

            <Button
                android:id="@+id/nexus"
                android:layout_width="match_parent"
                android:layout_height="261dp"
                android:background="@drawable/nexusefect"
                android:onClick="nexus" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/back"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:background="@drawable/regresar"
                    android:onClick="back" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>