<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Frm5Activity">

    <TextView
        android:id="@+id/caracteristicasmarketplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Marketi"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="335dp"
        android:layout_height="509dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caracteristicasmarketplace">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imagenmarket"
                    android:layout_width="match_parent"
                    android:layout_height="123dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:contentDescription="@string/fotomarket"
                    app:srcCompat="@drawable/market" />
            </RelativeLayout>

            <TextView
                android:id="@+id/Caracteristicas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/marketcaracteristicas"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/googlemusica"
                android:layout_width="match_parent"
                android:layout_height="222dp"
                android:contentDescription="@string/googlemusica"
                app:srcCompat="@drawable/googlemusica" />

            <TextView
                android:id="@+id/googleplay"
                android:layout_width="match_parent"
                android:layout_height="337dp"
                android:text="@string/cambiodenombre"
                android:textSize="30sp" />

            <Button
                android:id="@+id/regresoandroid1.1"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:background="@drawable/regresar"
                android:onClick="back" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>