<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Frm23Activity">

    <TextView
        android:id="@+id/android44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="cursive"
        android:text="@string/android44title"
        android:textColor="#042B0F"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="313dp"
        android:layout_height="517dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/android44">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/kitkaiimg"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:contentDescription="@string/imgkit"
                app:srcCompat="@drawable/kitkat1" />

            <TextView
                android:id="@+id/caracter44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/caracteristicas44"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/in44"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/in44f"
                app:srcCompat="@drawable/in44" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/back"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="130dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toStartOf="@+id/east44"
                    android:background="@drawable/regresar"
                    android:onClick="back" />

                <Button
                    android:id="@+id/east44"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="42dp"
                    android:layout_marginBottom="0dp"
                    android:background="@drawable/eastereggefect"
                    android:onClick="east44" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>